# ml-research

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
kedro/: Kedro.py
local_nb/: tensorflow_mnist_debug.ipynb
notebooks/: tensorflow_mnist_debug.ipynb
notebooks/anomaly_detection/: 00_data_prep.py  01_pca_anomaly.py  02_autoencoder_anomaly.py  03_compare.py  README.md
notebooks/deepar_forecasting/: deepar_forecasting.ipynb
notebooks/distributed_xgboost/: 00_data_prep.py  01_xgboost_python.py  02_xgboost_pyspark.py  03_xgboost_ray.py
notebooks/endpoint_lakebase/: (Clone) Lakebase Oauth with Token Refresh.ipynb  Adder Model.ipynb  Fraud Model.ipynb  Inference.ipynb  Lakebase Adder Model.ipynb  Token Refresh Model.ipynb
notebooks/feature_serving/: online_table.ipynb
notebooks/fraud_detection/: 00_data_prep.py  01_train_xgboost.py  02_batch_inference.py  03_model_serving.py  04_streaming_inference.py  05_monitoring.py  README.md
notebooks/gorda_ridge/: 00_ingest.py  01_process.py  02_eda.py  03_ml.py
notebooks/intro_to_agentic_ml/: 01_generate_sales.py  README.md  brewery_generator.py  databricks.yml  lab1_store_sku_recommender.py  lab2_autoloader_model.py  lab2_brewery_autoloader.py  lab3_ai_forecast.py  lab4_platform_walkthrough.ipynb  time-series-forecasting.skill.md
notebooks/intro_to_ml/: basic_autolog_register_example.ipynb
notebooks/ray/: README.md  (+11 more)
resources/: anomaly_detection_jobs.yml  distributed_xgboost_jobs.yml  fraud_detection_jobs.yml  gorda_ridge_jobs.yml  payments_jobs.yml  ray_jobs.yml  spark_vs_ray_jobs.yml
(+76 files in other folders)
