[tool.poetry]
name = "ml-research"
version = "0.0.2"
description = "A research repository dedicated to machine learning"
authors = ["Scott McKean <scott.mckean@databricks.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = "^0.29.1"
numpy = "^1.26.0"
torch = "^2.0.0"
tensorflow = "^2.15.0"
ray = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
